{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 72,
  "lineage": "528cb098-1f25-99bf-755e-720e80a039f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3ee50250d2f8a14",
            "domain": "vpc",
            "id": "eipalloc-0b3ee50250d2f8a14",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-164-88-207.us-west-2.compute.amazonaws.com",
            "public_ip": "35.164.88.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sdavidson-terraform eip 1",
              "Owner": "sdavidson"
            },
            "tags_all": {
              "Name": "sdavidson-terraform eip 1",
              "Owner": "sdavidson"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058529155828:internet-gateway/igw-00f12391e75b8ef3f",
            "id": "igw-00f12391e75b8ef3f",
            "owner_id": "058529155828",
            "tags": {
              "Name": "sdavidson-terraform-igw",
              "Owner": "sdavidson"
            },
            "tags_all": {
              "Name": "sdavidson-terraform-igw",
              "Owner": "sdavidson"
            },
            "vpc_id": "vpc-0e04191d2f66703a3"
          },
          "dependencies": [
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3ee50250d2f8a14",
            "connectivity_type": "public",
            "id": "nat-0101cc6cef88297b8",
            "network_interface_id": "eni-0dd4a7e3b3a84c3a1",
            "private_ip": "10.0.1.58",
            "public_ip": "35.164.88.207",
            "subnet_id": "subnet-07fabad2b1bcbe7a8",
            "tags": {
              "Name": "sdavidson-terraform nat gateway 1",
              "Owner": "sdavidson"
            },
            "tags_all": {
              "Name": "sdavidson-terraform nat gateway 1",
              "Owner": "sdavidson"
            }
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.gw",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058529155828:route-table/rtb-08a6cd7db0f196c21",
            "id": "rtb-08a6cd7db0f196c21",
            "owner_id": "058529155828",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0101cc6cef88297b8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sdavidson-terraform private route table",
              "Owner": "sdavidson"
            },
            "tags_all": {
              "Name": "sdavidson-terraform private route table",
              "Owner": "sdavidson"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e04191d2f66703a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058529155828:route-table/rtb-034513e03d98a3474",
            "id": "rtb-034513e03d98a3474",
            "owner_id": "058529155828",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00f12391e75b8ef3f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sdavidson-terraform public route table",
              "Owner": "sdavidson"
            },
            "tags_all": {
              "Name": "sdavidson-terraform public route table",
              "Owner": "sdavidson"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e04191d2f66703a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b36423f9e8964a4",
            "route_table_id": "rtb-08a6cd7db0f196c21",
            "subnet_id": "subnet-0b364c1b60b47bbd5"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw1",
            "aws_route_table.private_route_table",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4c7bdbce03f9fb6",
            "route_table_id": "rtb-08a6cd7db0f196c21",
            "subnet_id": "subnet-0e72265718507b460"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw1",
            "aws_route_table.private_route_table",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ba7ac5adde5a71c",
            "route_table_id": "rtb-08a6cd7db0f196c21",
            "subnet_id": "subnet-016de0bda2ede5b96"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw1",
            "aws_route_table.private_route_table",
            "aws_subnet.private3",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f55cd5536210a8a",
            "route_table_id": "rtb-034513e03d98a3474",
            "subnet_id": "subnet-07fabad2b1bcbe7a8"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a671fdeb371509d0",
            "route_table_id": "rtb-034513e03d98a3474",
            "subnet_id": "subnet-0f5365ff735ff7e49"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0980f5918a612b120",
            "route_table_id": "rtb-034513e03d98a3474",
            "subnet_id": "subnet-0f4f0767d6e8e9bef"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public1",
            "aws_subnet.public3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058529155828:subnet/subnet-0b364c1b60b47bbd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b364c1b60b47bbd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058529155828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sdavidson-terraform private 1",
              "Owner": "sdavidson"
            },
            "tags_all": {
              "Name": "sdavidson-terraform private 1",
              "Owner": "sdavidson"
            },
            "vpc_id": "vpc-0e04191d2f66703a3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058529155828:subnet/subnet-0e72265718507b460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e72265718507b460",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058529155828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sdavidson-terraform private 2",
              "Owner": "sdavidson"
            },
            "tags_all": {
              "Name": "sdavidson-terraform private 2",
              "Owner": "sdavidson"
            },
            "vpc_id": "vpc-0e04191d2f66703a3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058529155828:subnet/subnet-016de0bda2ede5b96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016de0bda2ede5b96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058529155828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sdavidson-terraform private 3",
              "Owner": "sdavidson"
            },
            "tags_all": {
              "Name": "sdavidson-terraform private 3",
              "Owner": "sdavidson"
            },
            "vpc_id": "vpc-0e04191d2f66703a3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058529155828:subnet/subnet-07fabad2b1bcbe7a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fabad2b1bcbe7a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058529155828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sdavidson-terraform public 1",
              "Owner": "sdavidson"
            },
            "tags_all": {
              "Name": "sdavidson-terraform public 1",
              "Owner": "sdavidson"
            },
            "vpc_id": "vpc-0e04191d2f66703a3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058529155828:subnet/subnet-0f5365ff735ff7e49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5365ff735ff7e49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058529155828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sdavidson-terraform public 2",
              "Owner": "sdavidson"
            },
            "tags_all": {
              "Name": "sdavidson-terraform public 2",
              "Owner": "sdavidson"
            },
            "vpc_id": "vpc-0e04191d2f66703a3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058529155828:subnet/subnet-0f4f0767d6e8e9bef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4f0767d6e8e9bef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058529155828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sdavidson-terraform public 3",
              "Owner": "sdavidson"
            },
            "tags_all": {
              "Name": "sdavidson-terraform public 3",
              "Owner": "sdavidson"
            },
            "vpc_id": "vpc-0e04191d2f66703a3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058529155828:vpc/vpc-0e04191d2f66703a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00c33c8d089ad289e",
            "default_route_table_id": "rtb-0e04f6a6917b02972",
            "default_security_group_id": "sg-0fd3107263c5cfc1d",
            "dhcp_options_id": "dopt-1b641863",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e04191d2f66703a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e04f6a6917b02972",
            "owner_id": "058529155828",
            "tags": {
              "Name": "sdavidson-terraform-vpc",
              "Owner": "5"
            },
            "tags_all": {
              "Name": "sdavidson-terraform-vpc",
              "Owner": "5"
            }
          }
        }
      ]
    }
  ]
}